style.css
/* 

    OS Component Website
    ====================
    
    shamelessly stolen CSS from systemd 
    https://github.com/systemd/systemd/tree/main/docs
    
*/

/* GNOME Color Palette */
/* prettier-ignore */
:root {
  --blue1:        rgb(153, 193, 241);
  --blue2:        rgb(98, 160, 234);
  --blue3:        rgb(53, 132, 228);
  --blue4:        rgb(28, 113, 216);
  --blue5:        rgb(26, 95, 180);
  --green1:       rgb(143, 240, 164);
  --green2:       rgb(87, 227, 137);
  --green3:       rgb(51, 209, 122);
  --green4:       rgb(46, 194, 126);
  --green5:       rgb(38, 162, 105);
  --yellow1:      rgb(249, 240, 107);
  --yellow2:      rgb(248, 228, 92);
  --yellow3:      rgb(246, 211, 45);
  --yellow4:      rgb(245, 194, 17);
  --yellow5:      rgb(229, 165, 10);
  --orange1:      rgb(255, 190, 111);
  --orange2:      rgb(255, 163, 72);
  --orange3:      rgb(255, 120, 0);
  --orange4:      rgb(230, 97, 0);
  --orange5:      rgb(198, 70, 0);
  --red1:         rgb(246, 97, 81);
  --red2:         rgb(237, 51, 59);
  --red3:         rgb(224, 27, 36);
  --red4:         rgb(192, 28, 40);
  --red5:         rgb(165, 29, 45);
  --purple1:      rgb(220, 138, 221);
  --purple2:      rgb(192, 97, 203);
  --purple3:      rgb(145, 65, 172);
  --purple4:      rgb(129, 61, 156);
  --purple5:      rgb(97, 53, 131);
  --brown1:       rgb(205, 171, 143);
  --brown2:       rgb(181, 131, 90);
  --brown3:       rgb(152, 106, 68);
  --brown4:       rgb(134, 94, 60);
  --brown5:       rgb(99, 69, 44);
  --light1:       rgb(255, 255, 255);
  --light2:       rgb(246, 245, 244);
  --light3:       rgb(222, 221, 218);
  --light4:       rgb(192, 191, 188);
  --light5:       rgb(154, 153, 150);
  --dark1:        rgb(119, 118, 123);
  --dark2:        rgb(94, 92, 100);
  --dark3:        rgb(61, 56, 70);
  --dark4:        rgb(36, 31, 49);
  --dark5:        rgb(0, 0, 0);

/* General Setup */
  --rounded-corner:         12px;               /* Set how rounded the corners will be */
  --rounded-corner-small:   8px;                /* Set how rounded the small corners will be */
  --primary-color:          var(--purple2);     /* Set your project primary color */
  --secondary-color:        var(--blue2);       /* Set your project secondary color */
  --background-color:       var(--light-bg1);   /* Set site background color */
  --background-color-dark:  var(--dark-bg3);    /* Set site background color (dark mode) */
  --container-width:        720px;              /* Set content width */

/* Custom Color Palette */
  --borders:        var(--light3);

  --light-op01:   rgba(255, 255, 255, 0.01);
  --light-op03:   rgba(255, 255, 255, 0.03);
  --light-op05:   rgba(255, 255, 255, 0.05);
  --light-op07:   rgba(255, 255, 255, 0.07);
  --light-op09:   rgba(255, 255, 255, 0.09);
  --light-op40:   rgba(255, 255, 255, 0.4);
  --light-op50:   rgba(255, 255, 255, 0.5);

  --dark-op01:    rgba(0, 0, 0, 0.01);
  --dark-op03:    rgba(0, 0, 0, 0.03);
  --dark-op05:    rgba(0, 0, 0, 0.05);
  --dark-op07:    rgba(0, 0, 0, 0.07);
  --dark-op09:    rgba(0, 0, 0, 0.09);
  --dark-op40:    rgba(0, 0, 0, 0.4);
  --dark-op50:    rgba(0, 0, 0, 0.5);

  --light-bg1:    rgb(250, 250, 250);
  --light-bg2:    rgb(255, 255, 255);
  --light-bg3:    rgb(75, 75, 75);

  --dark-bg1:     rgb(36, 36, 36);
  --dark-bg2:     rgb(30, 30, 30);
  --dark-bg3:     rgb(11, 11, 11);

  --archive-bg-color: rgba(145, 65, 172, 0.1);
  --archive-bg-color-dark: rgba(220, 138, 221, 0.1);
  --archive-color: rgb(145, 65, 172);
  --archive-color-dark: rgb(220, 138, 221);

  --disclaimer-bg-color: rgba(224, 27, 36, 0.1);
  --disclaimer-bg-color-dark: rgba(226, 97, 81, 0.1);
  --disclaimer-color: rgb(224, 27, 36);
  --disclaimer-color-dark: rgb(246, 97, 81);

  --trigger-bg-color: rgba(156, 110, 3, 0.1);
  --trigger-bg-color-dark: rgba(248, 228, 92, 0.1);
  --trigger-color: rgb(156, 110, 3);
  --trigger-color-dark: rgb(248, 228, 92);

/* Custom Variables */
  --shadow:         0 0 0 1px rgba(0, 0, 0, 0.03), 0 1px 3px 1px rgba(0, 0, 0, 0.07), 0 2px 6px 2px rgba(0, 0, 0, 0.03);
  --shadow-raised:  0 0 0 1px rgba(0, 0, 0, 0.03), 0 2px 6px 2px rgba(0, 0, 0, 0.09), 0 4px 12px 4px rgba(0, 0, 0, 0.06);
  --glow:           var(--primary-color) -6px 0 12px, var(--secondary-color) 6px 0 12px;

  --transition:         200ms;
  --transition-longer:  400ms;
  --transition-long:    800ms;
}

/* Typography */
@font-face {
  font-family: "InterVar";
  font-weight: 100 900;
  font-display: swap;
  font-style: oblique italic 0deg 10deg;
  src: url("fonts/Inter.var.woff2?v=4.0") format("woff2");
}

* {
  -moz-box-sizing: border-box;
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
}

html,
body {
  margin: 0;
  padding: 0;
  font-size: 16px;
  font-family: "InterVar", sans-serif;
  font-weight: 400;
  line-height: 1.6;
  scroll-behavior: smooth;
  scrollbar-color: var(--dark-op50) transparent;
}

@media only screen and (max-device-width: 480px) {
  html,
  body {
    font-size: 14px;
    font-weight: 400;
    line-height: 1.6;
  }
}

@media (prefers-color-scheme: dark) {
  html,
  body {
    scrollbar-color: var(--light-op50) transparent;
  }
}

body {
  color: var(--dark4);
  background-color: var(--background-color);
  /* ⇩⇩ put footer at the bottom for short pages, such as the 404 ⇩⇩ */
  display: grid;
  min-height: 100vh;
  grid-template-rows: auto minmax(auto, 1fr) auto; /* header, stuff, footer */
}

@media (prefers-color-scheme: dark) {
  body {
    color: var(--light2);
    background-color: var(--background-color-dark);
  }

  html {
    background-color: var(--dark5);
  }
}

:target {
  scroll-margin-top: 3.5rem;
  scroll-snap-margin-top: 3.5rem; /* iOS 11 and older */
}

h1,
h2,
h3,
h4,
h5,
h6 {
  margin: 3rem 0 1rem;
  font-weight: 600;
  line-height: 1.25;
  font-variation-settings: "wght" 600; /* needed for webkit */
}

h1 {
  font-size: 1.5rem;
}

@media screen and (min-width: 640px) {
  h1 {
    font-size: 1.6rem;
  }
}

h2 {
  font-size: 1.2rem;
}
/* ... */

